--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "axios": "^1.12.2",
     "core-js": "^3.8.3",
-    "element-ui": "^2.15.14",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
-    "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.2"
+    "element-plus": "^2.0.0",
+    "mavon-editor": "3.0.2",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0",
+    "vuedraggable": "^4.0.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,11 +25,11 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "sass-loader": "^12.0.0"
   },
   "eslintConfig": {
     "root": true,
